--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -2,6 +2,7 @@
   "name": "BackEnd",
   "version": "1.0.0",
   "dependencies": {
-    
+    "http": "0.0.1-security",
+    "xmlhttprequest": "^1.8.0"
   }
 }
