--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -1,8 +1,18 @@
 {
-  "name": "BackEnd",
+  "name": "backend",
   "version": "1.0.0",
   "dependencies": {
-    "http": "0.0.1-security",
-    "xmlhttprequest": "^1.8.0"
-  }
+    "express": "^4.17.1",
+    "socket.io": "^2.3.0",
+    "uniqid": "^5.2.0",
+    "ws": "^7.3.0"
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "main": "client.js",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
