--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "dependencies": {
     "express": "^4.17.1",
+    "http": "0.0.1-security",
     "socket.io": "^2.3.0",
     "uniqid": "^5.2.0",
-    "ws": "^7.3.0"
+    "ws": "^7.3.0",
+    "xmlhttprequest": "^1.8.0"
   },
   "scripts": {
     "start": "node server.js"
   },
-  "main": "client.js",
+  "main": "clientCreateGame.js",
   "devDependencies": {},
   "author": "",
   "license": "ISC",
