--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -31,8 +31,13 @@
   },
   "dependencies": {
     "file-loader": "^6.0.0",
+    "history": "^5.0.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "sass-loader": "^8.0.2",
     "url-loader": "^4.1.0"
   }
 }
