--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -30,6 +30,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "file-loader": "^6.0.0",
     "history": "^5.0.0",
     "node-sass": "^4.14.1",
