--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -5,6 +5,7 @@
   "main": "../src/index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
+    "start node": "webpack --open ../BackEnd/server.js",
     "build": "webpack --mode production"
   },
   "repository": {
@@ -24,6 +25,7 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
     "html-webpack-plugin": "^4.3.0",
+    "socket.io-client": "^2.3.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
@@ -31,14 +33,21 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "express": "^4.17.1",
     "file-loader": "^6.0.0",
     "history": "^5.0.0",
+    "http": "0.0.1-security",
+    "node": "^14.5.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "sass-loader": "^8.0.2",
-    "url-loader": "^4.1.0"
+    "socket.io": "^2.3.0",
+    "uniqid": "^5.2.0",
+    "url-loader": "^4.1.0",
+    "ws": "^7.3.0",
+    "xmlhttprequest": "^1.8.0"
   }
 }
