--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -10,9 +10,9 @@
     "xmlhttprequest": "^1.8.0"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node ./src/index.js"
   },
-  "main": "../FrontEnd/src/lib/client.js",
+  "main": "clientCreateGame.js",
   "devDependencies": {},
   "author": "",
   "license": "ISC",
